--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
       </center>
     </div>
     <hr />
+    <div class="container"></div>
+        <ul id="messages"></ul>
     </div>
     <form action="">
         <div class="container">
