--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <title>WORDCHAIN WAR GAME</title>
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; margin: 0 auto; max-width: 800px; padding: 0 20px;}
-      .container {border-radius: 5px; background-color: #f2f2f2; padding: 20px;}
-      form { background: #eee; padding: 3px; position: fixed; bottom: 0; width: 60%}
-      #m { border: 0; padding: 10px; width: 60%; margin-right: .5%; }
+      body { font: 13px Helvetica, Arial; margin: 0 auto; max-width: 700px; max-height: 50%; padding: 2px;}
+      .container {border-radius: 5px; background-color: #f2f2f2; padding: 2px;}
+      ul {display: block; min-height: 90%;min-height: 500px;}
+      form { background: #eee; padding: 3px; ; bottom: 0; width: 100%}
+      #m { border: 0; padding: 10px; width: 65%; margin-right: .5%; }
       #name { border: 0; padding: 10px; width: 20%; margin-right: .5%; }
       #result { border: 0; padding: 10px; margin-right: .5%; width: 10%; }
       form button { width: 10%; background: rgb(130, 224, 255); border: none; padding: 10px; }
@@ -42,19 +43,15 @@
       </center>
     </div>
     <hr />
-    <div class="container"></div>
-        <ul id="messages"></ul>
-    </div>
-    <form action="">
-        <div class="container">
-            <span id="result" style="font-weight: strong; color: red" title="WAR RESULT">0 : 0</span>
-            <input id="name" placeholder="Your name" required />
-            <input id="m" autocomplete="off" placeholder="Your message or word (start with /c to send chat message)" title="To comment press /c message" required />
-            <button title="Press enter or click the button to send">Send</button>
-            <input type="button" id="settingbtn" title="Press enter or click the button to send" value="Setting" />
-        </div>
-    </form>
     
+    <ul id="messages"></ul>
+    <form action="">
+        <input id="name" placeholder="Your name" required />
+        <input id="m" autocomplete="off" placeholder="Your message or word (start with /c to send chat message)" title="To comment press /c message" required />
+        <button title="Press enter or click the button to send">Send</button>
+        <input type="button" id="settingbtn" title="Press enter or click the button to send" value="Setting" />
+    </form>
+
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
