--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; margin: 0 auto; max-width: 700px; max-height: 50%; padding: 2px;}
       .container {border-radius: 5px; background-color: #f2f2f2; padding: 2px;}
-      ul {display: block; min-height: 90%;min-height: 500px;}
+      ul {display: block; height: 500px;}
       form { background: #eee; padding: 3px; ; bottom: 0; width: 100%}
       #m { border: 0; padding: 10px; width: 65%; margin-right: .5%; }
       #name { border: 0; padding: 10px; width: 20%; margin-right: .5%; }
@@ -47,7 +47,7 @@
     <ul id="messages"></ul>
     <form action="">
         <input id="name" placeholder="Your name" required />
-        <input id="m" autocomplete="off" placeholder="Your message or word (start with /c to send chat message)" title="To comment press /c message" required />
+        <input id="m" autocomplete="off" placeholder="Your message" title="Enter your message" required />
         <button title="Press enter or click the button to send">Send</button>
         <input type="button" id="settingbtn" title="Press enter or click the button to send" value="Setting" />
     </form>
