--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
       </center>
     </div>
     <hr />
-    
-    <ul id="messages"></ul>
+    <div style="overflow: auto">
+        <ul id="messages"></ul>
+    </div>
     <form action="">
         <input id="name" placeholder="Your name" required />
         <input id="m" autocomplete="off" placeholder="Your message" title="Enter your message" required />
