fix bug all room can listen to mess

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       body { font: 13px Helvetica, Arial; margin: 0 auto; max-width: 700px; max-height: 50%; padding: 2px;}
       ul {display: block; height: 500px;}
       form { background: #eee; padding: 3px; ; bottom: 0; width: 100%}
-      #m { border: 0; padding: 10px; width: 65%; margin-right: .5%; }
+      #m { border: 0; padding: 10px; width: 60%; margin-right: .5%; }
       #name { border: 0; padding: 10px; width: 20%; margin-right: .5%; }
       #result { border: 0; padding: 10px; margin-right: .5%; width: 10%; }
       form button { width: 10%; background: rgb(130, 224, 255); border: none; padding: 10px; }
@@ -65,7 +65,7 @@
       </center>
     </div>
     <hr />
-    <div style="overflow: auto">
+    <div id="messContainer" style="overflow: auto">
         <ul id="messages"></ul>
     </div>
     <form action="">
@@ -117,7 +117,7 @@
         }
         
         function scrollToLast(){
-            $('div').animate({ scrollTop: $("#messages li").last().offset().top}, 'slow');
+            $('div#messContainer').animate({ scrollTop: $("#messages li").last().offset().top}, 'slow');
         }
 
         function losed(msg)
@@ -235,9 +235,9 @@
           }
         });
         socket.on('wrongspelling', function(user, msg, roomid) {
-          $('#messages').append($('<li style="color:red">').text(user + " => " + msg));
           if(is_my_message(roomid))
           {
+            $('#messages').append($('<li style="color:red">').text(user + " => " + msg));
             if(user == $('#name').val())
             {
               losed("invalid word (spelling)")
