--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </center>
     </div>
     <hr />
-    <div style="overflow: auto">
+    <div id="messContainer" style="overflow: auto">
         <ul id="messages"></ul>
     </div>
     <form action="">
