--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
             }
             else
             {
+              otherwin = otherwin + 1;
               alert("LOSS")
             }
             $('#result').html(mywin + " : " + otherwin)
