--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+
   <head>
     <title>WORDCHAIN WAR GAME</title>
     <style>
